text alignement fix

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -103,6 +103,7 @@ nav {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 	border: none;
 	background: #101010;
 	width: 100px;
